--- a/LMS/templates/faculty_dashboardcards.html
+++ b/LMS/templates/faculty_dashboardcards.html
@@ -82,7 +82,7 @@
           <div class="card-block">
             <h6 class="m-b-20">Contact</h6>
             <h2 class="text-right"><i class="fas fa-mobile-alt f-left"></i></h2>
-            <p><span style="font-size: 20px;">{{student.Phone_No}}</span></p>
+            <p><span style="font-size: 20px;">{{faculty.Phone_No}}</span></p>
 
           </div>
         </div>
@@ -91,9 +91,10 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20">USN</h6>
+            <h6 class="m-b-20">Subject ID</h6>
             <h2 class="text-right"><i class="fas fa-list-ol f-left"></i></h2>
-            <p><span style="font-size: 20px;">{{student.USN}}</span></p>
+            <p><span style="font-size: 20px;">{{faculty.Subject_ID}}</span></p>
+            
           </div>
         </div>
       </div>
@@ -103,7 +104,7 @@
           <div class="card-block">
             <h6 class="m-b-20">Dept ID</h6>
             <h2 class="text-right"><i class="fas fa-dollar f-left"></i></h2>
-            <p><span style="font-size: 20px;">{{student.Dept_ID}}</span></p>
+            <p><span style="font-size: 20px;">{{faculty.Dept_ID}}</span></p>
           </div>
         </div>
       </div>
