deleted and remade the database

--- a/LMS/templates/student_dashboardcards.html
+++ b/LMS/templates/student_dashboardcards.html
@@ -92,7 +92,8 @@
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
             <h6 class="m-b-20">USN</h6>
-            <h2 class="text-right"><i class="fas fa-list-ol f-left"></i></h2>
+            <h2 class="text-right">
+            <i class="fas fa-list-ol f-left"></i></h2>
             <p><span style="font-size: 20px;">{{student.USN}}</span></p>
           </div>
         </div>
@@ -102,7 +103,8 @@
         <div class="card bg-c-pink order-card">
           <div class="card-block">
             <h6 class="m-b-20">Dept ID</h6>
-            <h2 class="text-right"><i class="fas fa-dollar f-left"></i></h2>
+            <h2 class="text-right">
+              <i class="fas fa-dollar f-left"></i></h2>
             <p><span style="font-size: 20px;">{{student.Dept_ID}}</span></p>
           </div>
         </div>
