--- a/LMS/templates/student_signup.html
+++ b/LMS/templates/student_signup.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Signup </title>
+    <title>Student Signup</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'studentsignup.css' %}">
-
 </head>
 
 <body>
@@ -19,14 +18,6 @@
                 <img class="ilogo" src="{% static 'ilogo.png' %}" />
             </div>
             <div class="frame-55">
-                <div class="frame-552">
-                    <div class="frame-28">
-                        <div class="select-role">Select Role:</div>
-                        <div class="frame-41">
-                            <div class="student">Student</div>
-                        </div>
-                    </div>
-                </div>
                 <div class="frame-56">
                     <div class="frame-27">
                         <div class="student-sign-up">Student Sign Up</div>
@@ -37,17 +28,17 @@
                                 <div class="frame-35">
                                     <div class="frame-24">
                                         <div class="usn">USN:</div>
-                                        <input type="text" class="frame-412" placeholder="Enter USN" />
+                                        <input type="text" class="frame-412" placeholder="Enter USN" name="usn" />
                                     </div>
                                 </div>
                                 <div class="frame-36">
                                     <div class="frame-24">
                                         <div class="password">Password:</div>
-                                        <input type="password" class="frame-412" placeholder="Enter Password" />
+                                        <input type="password" class="frame-412" placeholder="Enter Password" name="password" />
                                     </div>
                                     <div class="frame-26">
                                         <div class="confirm-password">Confirm Password:</div>
-                                        <input type="password" class="frame-412" placeholder="Enter Password" />
+                                        <input type="password" class="frame-412" placeholder="Enter Password" name="confirm_password" />
                                     </div>
                                 </div>
                             </div>
@@ -56,22 +47,25 @@
                                     <div class="frame-30">
                                         <div class="frame-24">
                                             <div class="name">Name:</div>
-                                            <input type="text" class="frame-412" placeholder="Name" />
+                                            <input type="text" class="frame-412" placeholder="Name" name="name" />
                                         </div>
                                         <div class="frame-272">
                                             <div class="gender">Gender:</div>
-                                            <div class="frame-413">
-                                            </div>
+                                            <select class="frame-413" name="gender">
+                                                <option value="male">Male</option>
+                                                <option value="female">Female</option>
+                                                <option value="other">Other</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="frame-37">
                                         <div class="frame-24">
-                                            <input type="email" class="frame-412" placeholder="Enter Email ID" />
-                                            <div class="frame-412"></div>
+                                            <div class="email-id">Email ID:</div>
+                                            <input type="email" class="frame-412" placeholder="Enter Email ID" name="email" />
                                         </div>
                                         <div class="frame-26">
                                             <div class="phone-no">Phone No:</div>
-                                            <input type="number" class="frame-412" placeholder="Enter Phone" />
+                                            <input type="number" class="frame-412" placeholder="Enter Phone" name="phone_no" />
                                         </div>
                                     </div>
                                 </div>
@@ -80,21 +74,23 @@
                                 <div class="frame-382">
                                     <div class="frame-24">
                                         <div class="joining-year">Joining Year:</div>
-                                        <div class="frame-413">
-                                        </div>
+                                        <input type="number" class="frame-412" placeholder="Enter Year" name="joining_year" />
                                     </div>
                                     <div class="frame-272">
                                         <div class="dept-id">Dept ID:</div>
-                                        <div class="frame-413">
-                                            <svg class="keyboard-arrow-down4" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M8.11997 10.0669L12 13.9469L15.88 10.0669C16.27 9.67691 16.9 9.67691 17.29 10.0669C17.68 10.4569 17.68 11.0869 17.29 11.4769L12.7 16.0669C12.31 16.4569 11.68 16.4569 11.29 16.0669L6.69997 11.4769C6.30997 11.0869 6.30997 10.4569 6.69997 10.0669C7.08997 9.68691 7.72997 9.67691 8.11997 10.0669Z"
-                                                fill="#955C7E" />
-                                            </svg>
-                                        </div>
+                                        <select name="dept_id" class="frame-413">
+                                            {% for dept in departments %}
+                                                <option value="{{ dept.Dept_ID }}">{{ dept.Dept_Name }}</option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
                                     <div class="frame-283">
-                                        <div class="subject-id">Subject ID:</div>
-                                        <input type="text" class="frame-412" placeholder="Enter SubjectIDs" />
+                                        <div class="subject-id">Subjects:</div>
+                                        <select name="subjects" class="frame-412" multiple>
+                                            {% for course in courses %}
+                                                <option value="{{ course.Subject_ID }}">{{ course.Subject_Name }}</option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -102,15 +98,12 @@
                                 <button type="submit" class="sign-up" name="submit">Signup</button>
                             </div>
                         </div>
-                        <div class="text-center">Don't have an account? <a href="login_page.html">SignUp here</a></div>
+                        <div class="text-center">Already have an account? <a href="/login-page/">Login here</a></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        </div>
-        </div>
-        </div>
     </form>
 </body>
 
