--- a/LMS/templates/student_signup.html
+++ b/LMS/templates/student_signup.html
@@ -3,108 +3,119 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Signup</title>
+    <title>teacher Signup </title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'studentsignup.css' %}">
+    <link rel="stylesheet" href="{% static 'teachersignup.css' %}">
+
+    <!-- Add your CSS styling here -->
 </head>
 
 <body>
     <form method="POST">
-        {% csrf_token %}
-        <div class="desktop-30">
-            <img class="commonbg" src="{% static 'commonbg.png' %}" />
-            <div class="frame-54">
-                <img class="ilogo" src="{% static 'ilogo.png' %}" />
-            </div>
-            <div class="frame-55">
-                <div class="frame-56">
-                    <div class="frame-27">
-                        <div class="student-sign-up">Student Sign Up</div>
-                    </div>
-                    <div class="frame-282">
-                        <div class="frame-18">
-                            <div class="frame-38">
-                                <div class="frame-35">
-                                    <div class="frame-24">
-                                        <div class="usn">USN:</div>
-                                        <input type="text" class="frame-412" placeholder="Enter USN" name="usn" />
-                                    </div>
-                                </div>
-                                <div class="frame-36">
-                                    <div class="frame-24">
-                                        <div class="password">Password:</div>
-                                        <input type="password" class="frame-412" placeholder="Enter Password" name="password" />
-                                    </div>
-                                    <div class="frame-26">
-                                        <div class="confirm-password">Confirm Password:</div>
-                                        <input type="password" class="frame-412" placeholder="Enter Password" name="confirm_password" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="frame-42">
-                                <div class="frame-39">
-                                    <div class="frame-30">
-                                        <div class="frame-24">
-                                            <div class="name">Name:</div>
-                                            <input type="text" class="frame-412" placeholder="Name" name="name" />
-                                        </div>
-                                        <div class="frame-272">
-                                            <div class="gender">Gender:</div>
-                                            <select class="frame-413" name="gender">
-                                                <option value="male">Male</option>
-                                                <option value="female">Female</option>
-                                                <option value="other">Other</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="frame-37">
-                                        <div class="frame-24">
-                                            <div class="email-id">Email ID:</div>
-                                            <input type="email" class="frame-412" placeholder="Enter Email ID" name="email" />
-                                        </div>
-                                        <div class="frame-26">
-                                            <div class="phone-no">Phone No:</div>
-                                            <input type="number" class="frame-412" placeholder="Enter Phone" name="phone_no" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="frame-40">
-                                <div class="frame-382">
-                                    <div class="frame-24">
-                                        <div class="joining-year">Joining Year:</div>
-                                        <input type="number" class="frame-412" placeholder="Enter Year" name="joining_year" />
-                                    </div>
-                                    <div class="frame-272">
-                                        <div class="dept-id">Dept ID:</div>
-                                        <select name="dept_id" class="frame-413">
-                                            {% for dept in departments %}
-                                                <option value="{{ dept.Dept_ID }}">{{ dept.Dept_Name }}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                    <div class="frame-283">
-                                        <div class="subject-id">Subjects:</div>
-                                        <select name="subjects" class="frame-412" multiple>
-                                            {% for course in courses %}
-                                                <option value="{{ course.Subject_ID }}">{{ course.Subject_Name }}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="frame-262">
-                                <button type="submit" class="sign-up" name="submit">Signup</button>
-                            </div>
-                        </div>
-                        <div class="text-center">Already have an account? <a href="/login-page/">Login here</a></div>
+        {% csrf_token %} 
+    <div class="desktop-35">
+        <img class="commonbg" src="{% static 'commonbg.png' %}" />
+        <div class="frame-54">
+            <img class="ilogo" src="{% static 'ilogo.png' %}" />
+        </div>
+        <div class="frame-55">
+            <div class="frame-552">
+                <div class="frame-28">
+                    <div class="select-role">Select Role:</div>
+                    <div class="frame-41">
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="frame-57">
+                <div class="frame-27">
+                    <div class="faculty-sign-up">Student Sign Up</div>
+                </div>
+                <div class="frame-282">
+                    <div class="frame-18">
+                        <div class="frame-38">
+                            <div class="frame-35">
+                                <div class="frame-24">
+                                    <div class="usn"> USN:</div>
+                                    <input type="text" class="frame-412" placeholder="Enter USN" />
+                                </div>
+                            </div>
+                            <div class="frame-36">
+                                <div class="frame-24">
+                                    <div class="password">Password:</div>
+                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                </div>
+                                <div class="frame-26">
+                                    <div class="confirm-password">Confirm Password:</div>
+                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frame-42">
+                            <div class="frame-39">
+                                <div class="frame-30">
+                                    <div class="frame-24">
+                                        <div class="name">Name:</div>
+                                        <input type="text" class="frame-412" placeholder="Name" />
+                                    </div>
+                                    <div class="frame-272">
+                                        <div class="gender">Gender:</div>
+                                           <select class="frame-413" name="gender">
+                                            <option value="male">Male</option>
+                                            <option value="female">Female</option>
+                                            <option value="other">Other</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="frame-37">
+                                <div class="frame-24">
+                                    <div class="email-id">Email ID:</div>
+                                    <input type="email" class="frame-412" placeholder="Enter Email ID" />
+                                </div>
+                                <div class="frame-26">
+                                    <div class="phone-no">Phone No:</div>
+                                    <input type="number" class="frame-412" placeholder="Enter Phone" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="frame-40">
+                        <div class="frame-382">
+                            <div class="frame-24">
+                                <div class="joiningyear">Joining Year:</div>
+                                <input type="text" class="frame-413" placeholder="Enter Joining Year" />
+                            </div>
+                            <div class="frame-272">
+                                <div class="dept-id">Dept ID:</div>
+                                {{ form.Dept_ID }}
+                            </div>                       
+                            <div class="frame-283">
+                                <div class="subject-id">Subject ID:</div>                               
+                                <select name="subjects" class="frame-412" multiple>
+                                    {% for course in courses %}
+                                        <option value="{{ course.Subject_ID }}">{{ course.Subject_Name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
 
+                            </div>
+                            </div>
+                        </div>                        
+                    <div class="frame-262">
+                        <button type="submit" class="sign_up" name="submit">Signup</button>
+                    </div>
+                    </div>
+                    <div class="text-center">Don't have an account? <a href="login_page.html">SignUp here</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    </div>
+    </div>
+    </div>
     </form>
 </body>
 
 </html>
+
