--- a/LMS/templates/faculty_dashboard.html
+++ b/LMS/templates/faculty_dashboard.html
@@ -213,7 +213,7 @@
             <div class="Frame45">
                 <div class="Frame46">
                 <div class="Frame47">Dashboard</a></div>
-                <div class="Frame48"><a href="{% url 'faculty_course' %}">Courses</a></div>
+                <div class="Frame48">Courses</a></div>
                 <div class="Frame49"><a href="{% url 'marks_list' %}">Marks</a></div>
                 <div class="Frame50"><a href="{% url 'mark_attendance' %}">Attendance</a></div>
                 <div class="Frame51">Circulars</a></div>
