--- a/LMS/templates/teacher_signup.html
+++ b/LMS/templates/teacher_signup.html
@@ -6,8 +6,6 @@
     <title>teacher Signup </title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'teachersignup.css' %}">
-
-    <!-- Add your CSS styling here -->
 </head>
 
 <body>
@@ -19,13 +17,6 @@
             <img class="ilogo" src="{% static 'ilogo.png' %}" />
         </div>
         <div class="frame-55">
-            <div class="frame-552">
-                <div class="frame-28">
-                    <div class="select-role">Select Role:</div>
-                    <div class="frame-41">
-                    </div>
-                </div>
-            </div>
             <div class="frame-57">
                 <div class="frame-27">
                     <div class="faculty-sign-up">Faculty Sign Up</div>
@@ -36,17 +27,17 @@
                             <div class="frame-35">
                                 <div class="frame-24">
                                     <div class="faculty-id">Faculty ID:</div>
-                                    <input type="text" class="frame-412" placeholder="Enter Faculty ID" />
+                                    <input type="text" class="frame-412" placeholder="Enter Faculty ID" name="faculty_id" />
                                 </div>
                             </div>
                             <div class="frame-36">
                                 <div class="frame-24">
                                     <div class="password">Password:</div>
-                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                    <input type="password" class="frame-412" placeholder="Enter Password" name="password"/>
                                 </div>
                                 <div class="frame-26">
                                     <div class="confirm-password">Confirm Password:</div>
-                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                    <input type="password" class="frame-412" placeholder="Enter Password"  name="confirm_password" />
                                 </div>
                             </div>
                         </div>
@@ -55,7 +46,7 @@
                                 <div class="frame-30">
                                     <div class="frame-24">
                                         <div class="name">Name:</div>
-                                        <input type="text" class="frame-412" placeholder="Name" />
+                                        <input type="text" class="frame-412" placeholder="Name" name="name"/>
                                     </div>
                                     <div class="frame-272">
                                         <div class="qualifications">Qualifications:</div>                                 
@@ -71,11 +62,11 @@
                             <div class="frame-37">
                                 <div class="frame-24">
                                     <div class="email-id">Email ID:</div>
-                                    <input type="email" class="frame-412" placeholder="Enter Email ID" />
+                                    <input type="email" class="frame-412" placeholder="Enter Email ID" name="email"/>
                                 </div>
                                 <div class="frame-26">
                                     <div class="phone-no">Phone No:</div>
-                                    <input type="number" class="frame-412" placeholder="Enter Phone" />
+                                    <input type="number" class="frame-412" placeholder="Enter Phone" name="phone_no" />
                                 </div>
                             </div>
                         </div>
@@ -84,11 +75,15 @@
                         <div class="frame-382">
                             <div class="frame-24">
                                 <div class="papers-published">Papers Published:</div>
-                                <input type="text" class="frame-413" placeholder="Enter Faculty ID" />
+                                <input type="text" class="frame-413" placeholder="Enter Faculty ID" name="papers_published" />
                             </div>
                             <div class="frame-272">
                                 <div class="dept-id">Dept ID:</div>
-                                {{ form.Dept_ID }}
+                                <select name="dept_id" class="frame-413">
+                                    {% for dept in departments %}
+                                        <option value="{{ dept.Dept_ID }}">{{ dept.Dept_Name }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>                       
                             <div class="frame-283">
                                 <div class="subject-id">Subject ID:</div>
@@ -105,7 +100,7 @@
                         <button type="submit" class="sign_up" name="submit">Signup</button>
                     </div>
                     </div>
-                    <div class="text-center">Don't have an account? <a href="login_page.html">SignUp here</a></div>
+                    <div class="text-center">Already have an account? <a href="/login-page/">Login here</a></div>
                 </div>
             </div>
         </div>
