--- a/LMS/templates/faculty_dashboard.html
+++ b/LMS/templates/faculty_dashboard.html
@@ -216,7 +216,7 @@
                 <div class="Frame48">Courses</a></div>
                 <div class="Frame49"><a href="{% url 'marks_list' %}">Marks</a></div>
                 <div class="Frame50"><a href="{% url 'mark_attendance' %}">Attendance</a></div>
-                <div class="Frame51">Circulars</a></div>
+                <div class="Frame51"><a img class="schedule" src="{% static 'college_schedule.jpeg' %}">Schedule</a></div>
                 </div>
                 <div class="Frame50">
                     <div class="Logout">
@@ -235,30 +235,12 @@
             </div>
             <div class="dashboard">
             <h1>Welcome, {{ faculty.Name }}!</h1>
+            <div class="user-details">
             {%include 'faculty_dashboardcards.html'%}
-                <div class="user-details">
-                    {% if faculty.gender == "Male" %}
-                        <!-- Male user icon -->
-                        <svg class="user-image" xmlns="http://www.w3.org/2000/svg" 
-                            width="100" 
-                            height="100" 
-                            fill="currentColor" 
-                            class="bi bi-gender-male" 
-                            viewBox="0 0 16 16">
-                            <path d="M10.5 0a5.5 5.5 0 0 0-5 8v3.6H5V8a7 7 0 0 1 11.1-5.7A5.5 5.5 0 0 0 10.5 0zM8 14h1v2H7v-2H6v-1h1v-2h1v2z"/>
-                        </svg>
-                    {% elif user.gender == "Female" %}
-                        <!-- Female user icon -->
-                        <svg class="user-image" xmlns="http://www.w3.org/2000/svg" 
-                            width="100" 
-                            height="100" 
-                            fill="currentColor" 
-                            class="bi bi-gender-female" 
-                            viewBox="0 0 16 16">
-                            <path d="M8 0C5.923 0 4.209.712 3 1.882v-.001C1.691 3.041 1 4.527 1 6.154 1 8.231 2.134 9 3.5 9h.001V8H3.5a1 1 0 0 0 0-2h-.001V5a1 1 0 0 0-1-1 1 1 0 0 0-1 1v1.382A5.49 5.49 0 0 0 0 6.997C0 8.43 1.343 10 4 10v1h1v-1a1 1 0 0 0-1-1 1 1 0 0 0-1 1v1.382A5.49 5.49 0 0 0 0 11.997C0 13.43 1.343 15 4 15h1v1h2v-1h2v1h2v-1h1c2.657 0 4-1.57 4-3.003a5.49 5.49 0 0 0-3-4.994V5.5a2.5 2.5 0 0 0-2.5-2.5h-1A2.5 2.5 0 0 0 8 1.5a2.5 2.5 0 0 0-2.5 2.5H4a5.49 5.49 0 0 0-3 4.994v.003C.476 9.269 0 8.217 0 6.997 0 3.57 2.686 1 5.5 1S11 3.57 11 6.997c0 1.343-.564 2.564-1.465 3.407A1.5 1.5 0 0 0 10.5 12h-1a1.5 1.5 0 0 0 0 3h1c.314 0 .6-.097.832-.254A3.509 3.509 0 0 1 13 12.994C13 10.57 10.314 8 7.5 8h-.001V9H7.5c1.366 0 2.5.769 2.5 2.846v.001c0 1.627-.69 3.113-1.999 4.273v.001C11.792 15.289 13 13.673 13 11.997a3.509 3.509 0 0 0-3.332-3.5A1.499 1.499 0 0 0 8 8.5H7a1.5 1.5 0 0 0 0 3h1a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5H7a1.5 1.5 0 0 0 0 3h1a.5.5 0 0 0 .5-.5V10c0-.964-.32-1.655-.856-2.197C7.321 6.878 7 6.527 7 5.5c0-1.378.716-2.5 1.5-2.5H9c.784 0 1.5 1.122 1.5 2.5 0 .527-.315 .878-.644 1.303C9.32 6.345 9 6.696 9 7.5a.5.5 0 0 0 .5.5h.5a.5.5 0 0 0 0-1h-.5v-2H9a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h.5a.5.5 0 0 0 0-1h-.5v-1H8c-1.366 0-2.5.769-2.5 2.846v.001c0 1.627.69 3.113 1.999 4.273v.001C6.208 15.289 5 13.673 5 11.997a3.509 3.509 0 0 1 3.332-3.5A1.499 1.499 0 0 1 10 9.5H9a1.5 1.5 0 0 1 0-3h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H9a1.5 1.5 0 0 1 0-3h1a.5.5 0 0 1 .5.5V10c0 .964-.32 1.655-.856 2.197-.536.546-1.008.803-1.644 1.096C7.678 13.454 7 14.184 7 15.5c0 1.378 1.116 2.5 2.5 2.5h1c1.384 0 2.5-1.122 2.5-2.5 0-.527-.315-.878-.644-1.303.318-.451.644-.802.644-1.697 0-1.378-.716-2.5-1.5-2.5z"/>
-                        </svg>
-                    {% endif %}
-                </div>
+            </div>
+            <div class="user-schedule" id="schedule-container">
+                <img class="schedule" src="{% static 'college_schedule.jpeg' %}" />
+            </div>
             </div>
         </div>
     </form>
