--- a/LMS/templates/faculty_dashboard.html
+++ b/LMS/templates/faculty_dashboard.html
@@ -128,6 +128,11 @@
             font-weight: 600;
             word-wrap: break-word;
         }
+        .Frame47,
+        .Frame49 {
+            /* Your existing styles */
+            cursor: pointer; /* Change cursor to pointer on hover */
+        }
         .dashboard {
             flex: 1; /* Take remaining space */
             width: auto;
@@ -144,6 +149,17 @@
             width: 100px; /* Adjust size as needed */
             height: 100px; /* Adjust size as needed */
             margin-bottom: 10px;
+        }
+        .user-schedule {
+        display: none;
+        max-width: 100%;
+        height: auto;
+        overflow: hidden; /* Hide any overflowing content */
+         }
+
+        .user-schedule .schedule {
+            width: 100%; /* Ensure the image takes up the full width of its container */
+            height: auto; /* Maintain aspect ratio */
         }
     </style>
 </head>
@@ -212,37 +228,56 @@
         <div class="Container">
             <div class="Frame45">
                 <div class="Frame46">
-                <div class="Frame47">Dashboard</a></div>
-                <div class="Frame48">Courses</a></div>
-                <div class="Frame49"><a href="{% url 'marks_list' %}">Marks</a></div>
-                <div class="Frame50"><a href="{% url 'mark_attendance' %}">Attendance</a></div>
-                <div class="Frame51"><a img class="schedule" src="{% static 'college_schedule.jpeg' %}">Schedule</a></div>
+                    <div class="Frame47" onclick="showDetails()">Dashboard</div>
+                    <div class="Frame48">Courses</a></div>
+                    <div class="Frame49" onclick="showSchedule()">Schedule</div>
+                    <div class="Frame50">Grade</a></div>
+                    <div class="Frame52">Attendance</a></div>
+                    <div class="Frame53">Extra Curricular</div>
                 </div>
                 <div class="Frame50">
                     <div class="Logout">
-                        <svg
-                        width="24"
-                        height="24"
-                        viewBox="0 0 24 24"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M18.5 5C18.7761 5 19 5.22386 19 5.5V18.5C19 18.7761 18.7761 19 18.5 19H5.5C5.22386 19 5 18.7761 5 18.5V5.5C5 5.22386 5.22386 5 5.5 5H18.5ZM11 8.79289L10.1046 9.68826L11.7929 11.3766H7V12.6234H11.7929L10.1046 14.3117L11 15.2071L14.2071 12L11 8.79289Z" fill="white"/>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M18.5 5C18.7761 5 19 5.22386 19 5.5V18.5C19 18.7761 18.7761 19 18.5 19H5.5C5.22386 19 5 18.7761 5 18.5V5.5C5 5.22386 5.22386 5 5.5 5H18.5ZM11 8.79289L10.1046 9.68826L11.7929 11.3766H7V12.6234H11.7929L10.1046 14.3117L11 15.2071L14.2071 12L11 8.79289Z" fill="white"/>
                         </svg>
                     </div>
-                    
                     <div class="Logout">Logout</div>
                 </div>
             </div>
             <div class="dashboard">
-            <h1>Welcome, {{ faculty.Name }}!</h1>
-            <div class="user-details">
-            {%include 'faculty_dashboardcards.html'%}
-            </div>
-            <div class="user-schedule" id="schedule-container">
-                <img class="schedule" src="{% static 'college_schedule.jpeg' %}" />
-            </div>
+                <h1>Welcome, {{ faculty.Name }}!</h1>
+                <div class="user-details">
+                    {% include 'faculty_dashboardcards.html' %}
+                </div>
+                <div class="user-schedule" id="schedule-container">
+                    <!--<img class="schedule" src="{% static 'college_schedule.jpeg' %}" />-->
+                    <a href="{% url 'faculty_marks_list' %}">View Marks</a>
+                    <a href="{% url 'faculty_attendance_list' %}">View Attendance</a>
+                </div>
             </div>
         </div>
+        
+        <script>
+            function hideAll() {
+                document.querySelector('.user-details').style.display = 'none';
+                document.querySelector('.user-schedule').style.display = 'none';
+            }
+        
+            function showDetails() {
+                hideAll();
+                document.querySelector('.user-details').style.display = 'block';
+            }
+        
+            function showSchedule() {
+                hideAll();
+                document.querySelector('.user-schedule').style.display = 'block';
+            }
+        
+            // Initialize by hiding all sections except user-details
+            hideAll();
+            showDetails();
+        </script>
+        
     </form>
 </body>
 
